# vid2scene

./: .dockerignore  .env.example  .gitignore  .gitmodules  LICENSE  NOTICE  README.md  Web_Dockerfile  Web_Dockerfile.dockerignore  Worker_Dockerfile  docker-compose.yaml  env_cuda_colmap.yml  package-lock.json  requirements_worker.txt
docs/: AWS_Worker_setup_steps.txt  Common_Commands.txt  Other_Useful_Notes.txt  apriltag_guide.md
scripts/: update_camera_type.py  vid2scene_api_test.py  web_entrypoint.sh
vid2scene_core/: 3dgs_autolod.py  apply_all_filters_to_image.py  apply_pilgram.py  apriltag_calibration.py  create_background_sphere.py  equirectangular_to_perspective.py  extract_frames.py  generate_sfm.py  generate_sfm_hloc.py  pano_sfm.py  premultiply_alphas.py  preview_data_handler.py  quest_to_colmap.py  reduce_colmap_points.py  remove_background.py  render_mesh.py  run_command.py  select_images.py  vggt_to_colmap.py  vid2scene.py  visualize_points_bin.py
vid2scene_core/autolod_cpp/: .gitignore  CMakeLists.txt  README.md  build-wasm.sh
vid2scene_core/autolod_cpp/src/: autolod.cpp  autolod.hpp  gaussian.hpp  main.cpp  ply_io.hpp  sh_resampling.hpp
vid2scene_core/autolod_cpp/test/: index.html
vid2scene_server/: EMAIL_SETUP.md  manage.py  requirements.txt
vid2scene_server/documentation/: urls.py  views.py
vid2scene_server/examples/: urls.py  views.py
vid2scene_server/examples_data/: manifest.json
vid2scene_server/notifications/: admin.py  context_processors.py  models.py
vid2scene_server/notifications/management/: __init__.py
vid2scene_server/notifications/migrations/: 0001_initial.py  0002_alter_sitealert_message.py
vid2scene_server/scripts/: upload_lod_to_azure.py
vid2scene_server/subscriptions/: admin.py  context_processors.py  models.py  test_admin.py  test_integration.py  test_models.py  test_purchases.py  test_refund_requests.py  urls.py  utils.py  views.py
vid2scene_server/subscriptions/migrations/: 0001_initial.py  0002_usersubscription_api_credits_remaining_and_more.py  0003_add_credit_transaction_and_perscene_checkout.py  0004_add_refund_request_model.py  0005_alter_credittransaction_transaction_type.py  0006_credittransaction_job_created_at_and_more.py
vid2scene_server/svraster_webgl_demo/: apps.py  package-lock.json  package.json  tsconfig.json  views.py  vite.config.ts
vid2scene_server/templates/: 404.html  500.html  admin_previews.html  autolod.html  autolod64.html  base.html  generate_lod_upload.html  landing.html  openapi.yaml  privacy.html  quest_upload.html  responsible_ai.html  status.html  svraster_webgl_demo.html  terms.html  upload.html  viewer.html
vid2scene_server/templates/admin/: index.html
vid2scene_server/templates/documentation/: api_docs.html  authentication.html  endpoints.html  getting_started.html  swagger.html
vid2scene_server/templates/examples/: example_list.html  example_recording.html
vid2scene_server/templates/partials/: analytics.html
vid2scene_server/templates/subscriptions/: subscribe.html  success.html
vid2scene_server/templates/user_homebase/: disable_tracking.html  jobs_status.html  profile.html
vid2scene_server/templates/user_statistics/: admin_statistics.html
vid2scene_server/user_homebase/: admin.py  apps.py  authentication.py  forms.py  models.py  urls.py  views.py
vid2scene_server/user_homebase/migrations/: 0001_initial.py
vid2scene_server/user_statistics/: views.py
vid2scene_server/vid2scene_server/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
vid2scene_server/video_processor/: admin.py  apps.py  dev_api.py  email_utils.py  forms.py  job_creation.py  middleware.py  models.py  permissions.py  serializers.py  settings_utils.py  tasks.py  test_api_keys.py  test_dev_api.py  test_job_creation.py  test_utils.py  test_web_api.py  test_web_api_security.py  tests.py  utils.py  views.py  web_api.py
vid2scene_server/video_processor/migrations/: 0001_initial.py  0002_video_job_id.py  0003_plyfile.py  0004_sceneprocessingjob_delete_plyfile_delete_video.py  0005_sceneprocessingjob_public_sceneprocessingjob_user.py  0006_sceneprocessingjob_camera_data.py  0007_sceneprocessingjob_preview_image.py  0008_sceneprocessingjob_example.py  0009_sceneprocessingjob_example_sort_order.py  0010_sceneprocessingjob_spz_file.py  0011_sceneprocessingjob_allow_as_example.py  (+19 more)
vid2scene_server/viewer/: embedded_viewer_test.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  views.py  vite.config.ts
(+43 files in other folders)
